--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,14 +17,14 @@
   "skills-title": "My skills",
   "portfolio-title": "My Portfolio",
   "portfolio-PrayerTimes": "Daily prayer times in Uzbekistan",
-  "portfolio-UzCars": "Uzbekistan 'GM' and 'UzAuto' cars",
+  "portfolio-chat": "Chat with celebrities",
   "portfolio-ProductsUsers": "Collection of products and users",
-  "portfolio-WhoGoesFirst": "Project of 'who goes first ?!'",
+  "portfolio-todo": "To-Do list",
   "portfolio-clock": "Device time display clock",
   "portfolio-calculator": "Calculator by 'Elmurod Ziyovuddinov'",
-  "portfolio-products": "Collection of products",
+  "portfolio-UzCars": "Uzbekistan 'GM' and 'UzAuto' cars",
   "portfolio-RickMorty": "Cartoon characters of 'Rick And Morty'",
-  "portfolio-todo": "To-Do list",
+  "portfolio-WhoGoesFirst": "Project of 'who goes first ?!'",
   "portfolio-phones": "Phones Cart is in 'React-Redux'",
   "portfolio-slider": "Slider project in 'React'",
   "portfolio-github": "Pagination of 'GitHub'",
