--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,14 +17,14 @@
   "skills-title": "Мои навыки",
   "portfolio-title": "Мое Портфолио",
   "portfolio-PrayerTimes": "Ежедневное время молитвы по Узбекистану",
-  "portfolio-UzCars": "Автомобили Узбекистана 'GM' и 'UzAuto'",
+  "portfolio-chat": "Пообщаться со знаменитостями",
   "portfolio-ProductsUsers": "Набор продуктов и пользователей",
-  "portfolio-WhoGoesFirst": "Проект 'кто доберется первым ?!'",
+  "portfolio-todo": "Список дел",
   "portfolio-clock": "Час, который показывают время устройства",
   "portfolio-calculator": "Калькулятор 'Эльмурода Зиевуддинова'",
-  "portfolio-products": "Набор продуктов",
+  "portfolio-UzCars": "Автомобили Узбекистана 'GM' и 'UzAuto'",
   "portfolio-RickMorty": "Герои мультфильмов 'Рик и Морти'",
-  "portfolio-todo": "Список дел",
+  "portfolio-WhoGoesFirst": "Проект 'кто доберется первым ?!'",
   "portfolio-phones": "Корзина телефонов в 'React-Redux'",
   "portfolio-slider": "Проект слайдера в 'React'",
   "portfolio-github": "Нумерация страниц 'GitHub'",
