--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -17,14 +17,14 @@
   "skills-title": "Ko'nikmalarim",
   "portfolio-title": "Bajargan Loyihalarim",
   "portfolio-PrayerTimes": "O'zbekiston bo'yicha kunlik namoz vaqtlari",
-  "portfolio-UzCars": "O'zbekiston 'GM' va 'UzAuto' mashinalari",
+  "portfolio-chat": "Mashhurlar bilan suhbat",
   "portfolio-ProductsUsers": "Mahsulotlar va Foydalanuvchilar to'plami",
-  "portfolio-WhoGoesFirst": "'Kim birinchi bo'lib yetib boradi' loyihasi",
+  "portfolio-todo": "Qilinadigan ishlar ro'yxati",
   "portfolio-clock": "Qurilma vaqtini ko'rsatadigan soat",
   "portfolio-calculator": "'Elmurod Ziyovuddinov' kalkulyatori",
-  "portfolio-products": "Mahsulotlar to'plami",
+  "portfolio-UzCars": "O'zbekiston 'GM' va 'UzAuto' mashinalari",
   "portfolio-RickMorty": "'Rick va Morty' multfilm qahramonlari",
-  "portfolio-todo": "Qilinadigan ishlar ro'yxati",
+  "portfolio-WhoGoesFirst": "'Kim birinchi bo'lib yetib boradi' loyihasi",
   "portfolio-phones": "Telefonlar savatchasi 'React-Redux' da",
   "portfolio-slider": "'React' da Slayder loyihasi",
   "portfolio-github": "'GitHub' ni sahifalash",
