--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,12 +17,12 @@
   "skills-title": "My skills",
   "portfolio-title": "My Portfolio",
   "portfolio-PrayerTimes": "Daily prayer times in Uzbekistan",
+  "portfolio-crm": "Customer Relationship Management Platform",
   "portfolio-chat": "Chat with celebrities",
-  "portfolio-ProductsUsers": "Collection of products and users",
   "portfolio-todo": "To-Do list",
   "portfolio-clock": "Device time display clock",
   "portfolio-calculator": "Calculator by 'Elmurod Ziyovuddinov'",
-  "portfolio-UzCars": "Uzbekistan 'GM' and 'UzAuto' cars",
+  "portfolio-ProductsUsers": "Collection of products and users",
   "portfolio-RickMorty": "Cartoon characters of 'Rick And Morty'",
   "portfolio-WhoGoesFirst": "Project of 'who goes first ?!'",
   "portfolio-phones": "Phones Cart is in 'React-Redux'",
