--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,12 +17,12 @@
   "skills-title": "Мои навыки",
   "portfolio-title": "Мое Портфолио",
   "portfolio-PrayerTimes": "Ежедневное время молитвы по Узбекистану",
+  "portfolio-crm": "Платформа управления взаимоотношениями с клиентами",
   "portfolio-chat": "Пообщаться со знаменитостями",
-  "portfolio-ProductsUsers": "Набор продуктов и пользователей",
   "portfolio-todo": "Список дел",
   "portfolio-clock": "Час, который показывают время устройства",
   "portfolio-calculator": "Калькулятор 'Эльмурода Зиевуддинова'",
-  "portfolio-UzCars": "Автомобили Узбекистана 'GM' и 'UzAuto'",
+  "portfolio-ProductsUsers": "Набор продуктов и пользователей",
   "portfolio-RickMorty": "Герои мультфильмов 'Рик и Морти'",
   "portfolio-WhoGoesFirst": "Проект 'кто доберется первым ?!'",
   "portfolio-phones": "Корзина телефонов в 'React-Redux'",
