--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -17,12 +17,12 @@
   "skills-title": "Ko'nikmalarim",
   "portfolio-title": "Bajargan Loyihalarim",
   "portfolio-PrayerTimes": "O'zbekiston bo'yicha kunlik namoz vaqtlari",
+  "portfolio-crm": "Mijozlar bilan munosabatlarni boshqarish platformasi",
   "portfolio-chat": "Mashhurlar bilan suhbat",
-  "portfolio-ProductsUsers": "Mahsulotlar va Foydalanuvchilar to'plami",
   "portfolio-todo": "Qilinadigan ishlar ro'yxati",
   "portfolio-clock": "Qurilma vaqtini ko'rsatadigan soat",
   "portfolio-calculator": "'Elmurod Ziyovuddinov' kalkulyatori",
-  "portfolio-UzCars": "O'zbekiston 'GM' va 'UzAuto' mashinalari",
+  "portfolio-ProductsUsers": "Mahsulotlar va Foydalanuvchilar to'plami",
   "portfolio-RickMorty": "'Rick va Morty' multfilm qahramonlari",
   "portfolio-WhoGoesFirst": "'Kim birinchi bo'lib yetib boradi' loyihasi",
   "portfolio-phones": "Telefonlar savatchasi 'React-Redux' da",
